# Noita-Spamplayerghost

./: CMakeLists.txt
SpamPlayerghost/: init.lua  mod.xml  mod_id.txt  settings.lua  workshop.xml  workshop_id.txt
